# promptmind

./: .env  .gitignore  README.md  app.py  pyproject.toml
agents/: basic_chatbot.py  chatbot_with_memory.py  chatbot_with_persistence.py  chatbot_with_websearch.py
app/: embeddings.py  ingest.py  query.py  settings.py  tracing.py
app/commands/: chat_command.py  index_command.py  query_command.py
opentelemetry/: docker-compose.yml  otel-collector-config.yml
scripts/: basic_react_agent.py  embeddings.py  index.py  query.py  simple.py
