[project]
name = "promptmind"
version = "0.1.0"
description = "A privacy-friendly, locally running AI knowledge base."
authors = [
    {name = "Philipp",email = "pd95@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
