[project]
name = "promptmind"
version = "0.1.0"
description = "A privacy-friendly, locally running AI knowledge base."
authors = [
    {name = "Philipp",email = "pd95@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "frozenlist (>=1.7.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langgraph (>=0.4.7,<0.5.0)",
#   "duckduckgo-search (>=8.0.2,<9.0.0)",
#   "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)",
    "traceloop-sdk (>=0.40.7,<0.41.0)",
#   "langchain-docling (>=0.2.0,<0.3.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
